app/assets/stylesheets/_worktimes.scss
$worktimes-border: #ccc;
$worktimes-border-radius: 3px;
$worktimes-weeknav-bg: #eee;
$worktimes-weeknav-active-bg: #fff;
$worktimes-weeknav-hover-bg: lightblue;
$worktimes-weekcontent-hover-bg: lightblue;
$worktimes-font-size-small: 12px;
$worktimes-default-spacing: 10px;

.worktimes {
  .figures {
    @include clearfix;

    .balance {
      float: left;
      margin-left: 2 * $worktimes-default-spacing + 16px;
    }
    .monthly {
      float: left;
      margin-left: 20 * $worktimes-default-spacing;
    }
  }

  .weeknav {
    @include clearfix;
    padding: $worktimes-default-spacing 0;

    &.stuck {
      position: fixed;
      top: 0;
      z-index: 99;

      .browser {
        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
      }
    }

    .week-link {
      display: block;
      float: left;
      margin: 19px $worktimes-default-spacing 0 $worktimes-default-spacing;
    }

    .browser {
      float: left;
      width: 992px - 4 * $worktimes-default-spacing - 2 * 16px - 2px;
      border: 1px solid $worktimes-border;
      border-radius: $worktimes-border-radius;
      background-color: $worktimes-weeknav-bg;

      .total {
        border-left: 1px solid $worktimes-border;
      }

      .total, .control {
        float: right;
        line-height: 55px;
        vertical-align: middle;
        padding: 0 $worktimes-default-spacing;
      }
    }

    .days {
      float: left;
      list-style: none;
      margin: 0;
      padding: 0;
      @include clearfix;

      .day {
        display: table-cell;
        vertical-align: middle;
        height: 55px - 2 * $worktimes-default-spacing;
        float: left;
        padding: $worktimes-default-spacing;
        cursor: pointer;
        border-width: 0 1px;
        border-style: solid;
        border-color: transparent;

        &:hover {
          background-color: $worktimes-weeknav-hover-bg;
        }

        &.active {
          background-color: $worktimes-weeknav-active-bg;
          border-color: $worktimes-border;
        }

        &:first-child {
          border-left-color: transparent;
        }
        
        &.today {
          background-color: lightgrey;
        }
        
        &.holiday {
          .time {
            color: grey;  
          }
        }
        &.missing {
          .time {
            color: red;
          }
        }

        .date {
          font-weight: bold;
        }
        .time {
          font-size: $worktimes-font-size-small;
        }
      }
    }
  }

  .weekcontent {
    margin-bottom: $worktimes-default-spacing;

    .date-label, .entry {
      padding: $worktimes-default-spacing 0;
      clear: both;
      background-color: none;
      -moz-transition: background-color 500ms ease-in;
      -webkit-transition: background-color 500ms ease-in;
      -o-transition: background-color 500ms ease-in;
      transition: background-color 500ms ease-in;

      &.highlight {
        background-color: $worktimes-weekcontent-hover-bg;
      }
    }

    .date-label {
      margin-top: $worktimes-default-spacing;
      padding: $worktimes-default-spacing;
      font-size: $worktimes-font-size-small;
      color: gray;

      &.empty {
        display: none;
      }
    }

    .entry {
      display: block;
      position: relative;
      border-top: 1px solid $worktimes-border;
      text-decoration: none;
      @include clearfix;

      &:hover, &:active {
        background-color: $worktimes-weekcontent-hover-bg;
      }

      .entry-link {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 1
      }

      .title-description, .time-range, .time-value, .controls {
        float: left;
        padding: 0 $worktimes-default-spacing;
      }

      .title-description {
        float: left;
      }

      .time-range, .time-value, .controls {
        float: right;
      }

      .title, .time-value {
        font-weight: bold;
      }

      .description, .time-range {
        font-size: $worktimes-font-size-small;
      }

      .description {
        @include ellipsis(true);
        max-width: 750px;
      }

      .controls a {
        display: block;
        float: left;
        position: relative;
        margin-right: 5px;
        z-index: 2;
      }
    }
  }
}

